// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data="Article (original research)"
        heading="Sub-type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render component with empty publication 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    />
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li>
              <a
                href="/collection/UQ:396321"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;
